# mtg-card-infos

./: cards.csv  magic.py  pyproject.toml  result.csv
data/: cards.csv  result.csv
