[tool.poetry]
name = "magic the gathering"
version = "0.1.0"
description = ""
authors = ["Elias <1elias.bauer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
requests = "^2.28.2"
pandas = "^1.5.2"
beautifulsoup4 = "^4.11.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
